added transaction tab

--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
         <button class="tab-btn" data-tab="tab-byes">Bye Week Matrix</button>
         <button class="tab-btn" data-tab="tab-alerts">Alerts<span class="dot" aria-hidden="true"></span></button>
         <button class="tab-btn" data-tab="tab-waivers">Waiver Wire</button>
+        <button class="tab-btn" data-tab="tab-transactions">Transactions</button>
       </div>
       <div class="sections" id="leagueSections">
         <section id="tab-roster" class="active"><div id="rosterTable"></div></section>
@@ -290,6 +291,7 @@
           </div>
           <div id="waiverTable" style="margin-top:8px"></div>
         </section>
+        <section id="tab-transactions"><div id="transactionsTable"></div></section>
       </div>
     </div>
 
