--- a/index.html
+++ b/index.html
@@ -42,12 +42,7 @@
   .sidebar-connect a{ color:#8fa1ff99; text-decoration:none }
   .sidebar-connect a:hover{ text-decoration:underline }
 
-  .alert-badge{
-    background:#e23b3b; color:#fff; min-width:22px; height:22px; padding:0 6px;
-    border-radius:999px; display:inline-flex; align-items:center; justify-content:center;
-    font-weight:800; font-size:12px; box-shadow:0 0 0 2px rgba(0,0,0,.25);
-  }
-  .alert-badge.hidden{display:none}
+  /* numeric alert badge removed in favor of 3-dot signal */
 
   .controls{display:flex;gap:12px;align-items:flex-end;flex-wrap:wrap;justify-content:flex-start}
   .controls .group{min-width:160px}
@@ -261,7 +256,7 @@
         <div class="li-title">User Summary</div>
         <div class="li-sub">Cross-league view</div>
       </div>
-      <span class="alert-badge hidden" aria-hidden="true">0</span>
+  <!-- 3-dot signal only -->
     </div>
 
     <div class="nav-head">Your Leagues</div>
